# poetry-practice

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt
