[project]
name = "poetry-practice"
version = "0.1.0"
description = ""
authors = [
    {name = "Lourival Pinheiro",email = "lourivaltpneto@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "poetry_practice", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
